<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_layout_user_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/user_profile_background"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingBottom="15sp">

                <ImageButton
                    android:id="@+id/edit_profile_button"
                    android:layout_width="25sp"
                    android:layout_height="25sp"
                    android:layout_marginTop="5sp"
                    android:layout_marginEnd="15sp"
                    android:background="@drawable/edit_button"
                    android:visibility="visible" />
            </LinearLayout>

            <FrameLayout
                android:id="@+id/user_pfp_frameLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:foreground="@color/orange"
                android:foregroundGravity="center_horizontal">

                <ImageView
                    android:id="@+id/user_profile_picture"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:src="@drawable/user_pfp_example" />

            </FrameLayout>

            <TextView
                android:id="@+id/user_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/example_full_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/user_profile_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/bio_hint"
                android:padding="10dp"
                android:tag="Field"
                android:text="@string/placeholder_bio"
                android:textAlignment="center"
                android:textColor="@color/black"

                android:textSize="17sp" />

            <EditText
                android:id="@+id/user_profile_bio_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bio_edit_hint"
                android:inputType="text"
                android:maxLength="50"
                android:textAlignment="center"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="50dp"
                    android:paddingTop="10dp"
                    android:paddingRight="50dp"
                    android:paddingBottom="10dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/language_header"
                            android:textColor="@color/light_sea_green">

                        </TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="10dp"
                            android:text="@string/example_languages"
                            android:textColor="@color/black">

                        </TextView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/location_header"
                            android:textColor="@color/light_sea_green">

                        </TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="10dp"
                            android:text="@string/example_location_montreal"
                            android:textColor="@color/black">

                        </TextView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/activities_header"
                            android:textColor="@color/light_sea_green">

                        </TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="10dp"
                            android:text="@string/activity_count_example"
                            android:textColor="@color/black" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/user_profile_personal_info_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="80dp"
                    app:cardCornerRadius="15dp"
                    app:strokeColor="@color/light_sea_green"
                    app:strokeWidth="3dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="5dp"
                        android:orientation="vertical"
                        android:paddingLeft="15dp"
                        android:paddingTop="5dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/personal_information_title"
                            android:textAlignment="center"
                            android:textColor="@color/light_sea_green"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/user_profile_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/example_email"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <LinearLayout
                            android:id="@+id/user_profile_phone_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:orientation="horizontal"
                            android:visibility="gone">

                            <TextView
                                android:id="@+id/user_profile_phone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="@string/example_phone_number"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                            <ImageButton
                                android:id="@+id/user_profile_phone_edit_button"
                                android:layout_width="25sp"
                                android:layout_height="25sp"
                                android:layout_marginStart="15sp"
                                android:background="@drawable/edit_button"
                                android:visibility="gone" />

                        </LinearLayout>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/user_profile_addPhoneButton"
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:layout_gravity="center_horizontal"
                            android:padding="5dp"
                            android:text="@string/add_phone_number"
                            android:textSize="11sp"
                            app:backgroundTint="@color/light_sea_green" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/user_profile_passwordButton"
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:layout_gravity="center_horizontal"
                            android:padding="5dp"
                            android:text="@string/change_password"
                            android:textSize="11sp"
                            android:visibility="gone"
                            app:backgroundTint="@color/light_sea_green" />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <!-- TODO: Remove this and Add past Activity  -->
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginHorizontal="5dp"
                            android:foregroundGravity="center_horizontal"
                            android:src="@drawable/ic_activities" />

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginHorizontal="5dp"
                            android:foregroundGravity="center_horizontal"
                            android:src="@drawable/ic_activities" />

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginHorizontal="5dp"
                            android:foregroundGravity="center_horizontal"
                            android:src="@drawable/ic_activities" />

                    </LinearLayout>
                </ScrollView>
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>