...
    <string name="select_start_time">Select Start Time</string>
    <string name="select_end_time">Select End Time</string>
    <string name="select_date">Select Date</string>
    <string name="MAPBOX_PUBLIC_ACCESS_TOKEN">pk.eyJ1IjoiYWMyMDAwIiwiYSI6ImNsYzEwdng2YzJpenEzdXBudDR2NWczNW0ifQ.20lZpfiX1vGKx1J8-dodqw</string>

    <string name="placeholder_bio">loading bio...</string>
    <string name="add_phone_number">Add Phone Number</string>
    <string name="change_password">Change Password</string>
    <string name="past_activities">PAST ACTIVITIES</string>
    <string name="example_phone_number">Phone: +14384532313</string>
    <string name="example_email">Email: john.doe@email.ca</string>
    <string name="personal_information_title">Account Information</string>
    <string name="activity_count_example">5</string>
    <string name="activities_header">ACTIVITIES</string>
...
